@@ -1,3 +1,5 @@
+// Dear emacs, this is -*- c++ -*-
+// $Id$
 #ifndef XAODTRIGL1CALO_VERSIONS_CMMETSUMSCONTAINER_V1_H
 #define XAODTRIGL1CALO_VERSIONS_CMMETSUMSCONTAINER_V1_H
 
